@@ -7,6 +7,7 @@
 	* themes/gtk/
 	* themes/gradient/: removed
 
+	* themes/candido/
 	* themes/Zami-like/: added
 
 2011-05-22  Christopher Roy Bratusek <nano@tuxfamily.org>
